# Full-Stack-LearnForge-AI-Agent

./: README.md
.github/workflows/: ci-cd.yml
client/: components.json  package-lock.json  package.json  tailwind.config.ts
client/app/: globals.css  layout.tsx  page.tsx
client/components/: course-card.tsx  theme-toggle.tsx
client/lib/: firebase.ts
client/services/: ai.ts  api.ts  auth-service.ts  course-service.ts  enrollment-service.ts  progress-service.ts  user-service.ts
docs/: 01-master-plan.md  02-technical-architecture.md  03-database-schema.md  04-api-specification.md  05-deployment-strategy.md  06-security-auth.md  07-ai-ml-integration.md  08-ui-ux-guidelines.md
server/: .env  Dockerfile  README.md  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 313de4a600f8_add_enrollment_table.py  6b055fa4d345_initial_migration.py  842f0ce8d407_add_course_and_progress_tables.py
server/app/: main.py
server/app/api/v1/: api.py  router.py
server/app/api/v1/endpoints/: ai.py  courses.py  enrollments.py  media.py  progress.py  users.py
server/app/core/: config.py  security.py
server/app/crud/: crud_course.py  user.py
server/app/db/: base.py  session.py
server/app/models/: __init__.py  course.py  enrollment.py  progress.py  user.py
server/app/schemas/: __init__.py  ai.py  course.py  enrollment.py  progress.py  user.py
server/app/services/: analytics_service.py  media_service.py  performance_service.py
server/app/services/ai/: agents.py  base_provider.py  factory.py  gemini_provider.py  ingestion.py  pinecone_service.py
server/scripts/: test_ai.py  verify_auth.py
(+20 files in other folders)
