[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard,standred]>=0.128.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "supabase>=2.27.1",
    "uvicorn[standard]>=0.40.0",
]
